Thu Sep 25 10:37:38 2003  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/filecheck.[ch], daemon/gdm.[ch],
	  daemon/misc.c, daemon/slave.c:  Auditing the file handling
	  stuff, increase general paranoia and code anality about
	  these things plus check pretty much every return of the
	  sete[ug]id even though they are pretty much guaranteed
	  to exist.  Being paranoid here is good.  Allow the
	  authentication cookie be given in upper case hex for
	  the socket protocol.

Wed Sep 24 18:01:06 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: add some extra anality to the slave when looking
	  at the session name supplied in .dmrc, and also be careful about
	  what we read as the user pic.

Wed Sep 24 16:34:02 2003  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_item_pam.c, gui/greeter/greeter_geometry.c,
	  gui/greeter/greeter_canvas_item.[ch]: rework the text wrapping
	  stuff.  Now we use pango to figure out where breaks should be
	  and then do a pretty stupid algorithm to break the string at
	  the requested length.  This works better it seems and isn't
	  perhaps on as much crack as messing with the canvas text items
	  pango layout.  It's still on crack however.

Wed Sep 24 13:21:43 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: don't exec chooser/greeter in shell that's kind of
	  evil and resets too many env vars.  Instead reset to the original
	  env first and then setup our env vars and exec the greeter or
	  chooser.

	* gui/greeter/greeter.c, gui/greeter/greeter_canvas_item.[ch],
	  gui/greeter/greeter_events.c, gui/greeter/greeter_geometry.c,
	  gui/greeter/greeter_item.[ch],
	  gui/greeter/greeter_item_customlist.c,
	  gui/greeter/greeter_item_pam.c, gui/greeter/greeter_parser.c:
	  Fix bug #123017 with use of evil hacks (as if the original
	  text code was not evil). Check max-width and
	  max-screen-percent-width attributes for label pos elements.
	  Wrap text if it goes over it's width or the max-width